--- a/miniapp/pages/index/index.wxml
+++ b/miniapp/pages/index/index.wxml
@@ -1,13 +1,10 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+<!--pages/home/home.wxml-->
+<view class="fixed-wrapper">
+  <view class='fixed-search'></view>
+  <view class='fixed-class'></view>
+</view>
+<view class='main-page'>
+  <view wx:for="{{goodList}}" wx:for-item="good" wx:key="id">
+  <goods-card good="{{good}}"></goods-card>
   </view>
 </view>
