--- a/miniapp/pages/search/search.wxml
+++ b/miniapp/pages/search/search.wxml
@@ -1,4 +1,6 @@
+<!--pages/search/search.wxml-->
 <view class="page">
+    <view class="page__bd">
         <view class="weui-search-bar">
             <view class="weui-search-bar__form">
                 <view class="weui-search-bar__box">
@@ -37,4 +39,5 @@
                 </view>
             </navigator>
         </view>
+    </view>
 </view>
