--- a/miniapp/components/message-card/message-card.wxss
+++ b/miniapp/components/message-card/message-card.wxss
@@ -3,6 +3,22 @@
   display: inline-block;
   width: 100rpx;
   height: 100rpx;
-  background: #31b0d5;
+  border-radius:50%;
+  background: #FF0077;
   color: #FFF;
+}
+.name{
+  display: inline-block;
+  padding-left: 20rpx;
+  line-height: 100rpx;
+  height: 100rpx;
+}
+.content{
+  padding: 10rpx 0 0 120rpx;
+}
+.time{
+  font-size: 28rpx;
+  color: #999;
+  padding: 10rpx 0 150rpx 120rpx;
+  border-bottom: 1rpx solid #EFEFEF;
 }
