--- a/miniapp/pages/goods-info/goods-info.wxml
+++ b/miniapp/pages/goods-info/goods-info.wxml
@@ -1,16 +1,21 @@
 <!--pages/goods-info/goods-info.wxml-->
 <view class='wrapper'>
-<scroll-view>
-<users-intro user='{{good.user}}'></users-intro>
-<view class='title'>{{good.name}}</view>
-<view class='details'>{{good.details}}</view>
-<image src='{{good.img}}' class='image'></image>
-<view class='message-wrapper'>
-<message-card></message-card>
+  <view class='user-info'>
+    <users-intro user='{{good.user}}'></users-intro>
+  </view>
+  <view class="price">
+    <wxc-price value="{{good.price}}" decimal="small"></wxc-price>
+  </view>
+  <!-- <view class='title'>{{good.name}}</view> -->
+  <view class='details'>{{good.details}}</view>
+  <image src='{{good.img}}' class='image'></image>
 </view>
-</scroll-view>
+<view class='message-wrapper'>
+  <view class='message-title'>留言</view>
+  <view class='message-content'>
+    <message-card></message-card>
+  </view>
 </view>
 <view class='tab-bar'>
   <view class='comment'>留言</view>
-  <view class='star'>收藏</view>
-</view> 
+</view>
