--- a/miniapp/pages/me/me.wxml
+++ b/miniapp/pages/me/me.wxml
@@ -1,8 +1,9 @@
 <!--pages/me/me.wxml-->
 <view class='wrapper'>
-  <users-intro user='{{user}}'></users-intro>
-  <view bindtap='toMyGoods'>我发布的物品</view>
-  <view bindtap='toMessage'>我的消息</view>
-  <view>我的收藏</view>
-  <view bindtap='toSet'>设置</view>
+  <view class='user-info'>
+    <users-intro user='{{user}}'></users-intro>
+  </view>
+  <view class='published' bindtap='toMyGoods'>我发布的</view>
+  <view class='message' bindtap='toMessage'>我的消息</view>
+  <view class='setting' bindtap='toSet'>设置</view>
 </view>
