--- a/miniapp/pages/me/me.wxss
+++ b/miniapp/pages/me/me.wxss
@@ -1,1 +1,14 @@
 /* pages/me/me.wxss */
+.user-info{
+  padding: 10px 10px 20px;
+}
+.published,.message,.setting{
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  padding: 0 20px;
+  border-bottom: 1px solid #EFEFEF;
+}
+.published{
+  border-top: 10px solid #EFEFEF;
+}
