--- a/miniapp/pages/publish/publish.wxss
+++ b/miniapp/pages/publish/publish.wxss
@@ -1,46 +1,28 @@
-/* pages/publish/publish.wxss */
-.image {
+.input{
+  padding: 10px 10px;
+  font-size: 18px;
+  line-height: 24px;
+  border-top: 2px solid #EFEFEF;
+}
+.textarea{
+  padding-left: 10px;
+  font-size: 14px;
+  line-height: 18px;
+}
+.address{
+  font-size: 14px;
+  padding: 10px 10px;
+}
+.price{
+  font-size: 14px;
+  padding: 10px 10px;
+  border-bottom: 10px solid #EFEFEF;  
+}
+.img-up{
+  padding-bottom: 10px;
+}
+.btn-wrapper{
   width: 100%;
-  height: 360rpx;
-}
-.image-plus {
-  width: 150rpx;
-  height: 150rpx;
-  border: 2rpx solid #D9D9D9;
-  position: relative;
-}
-.image-plus-nb{
-  border: 0;
-}
-.image-plus-text{
-  color: #888888;
-  font-size: 28rpx;
-}
-.image-plus-horizontal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: #d9d9d9;
-  width: 4rpx;
-  height: 80rpx;
-  transform: translate(-50%, -50%);
-}
-.image-plus-vertical {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: #d9d9d9;
-  width: 80rpx;
-  height: 4rpx;
-  transform: translate(-50%, -50%);
-}
-.page-body-info {
-  display: flex;
-  box-sizing: border-box;
-  padding: 30rpx;
-  height: 420rpx;
-  border-top: 1rpx solid #D9D9D9;
-  border-bottom: 1rpx solid #D9D9D9;
-  align-items: center;
-  justify-content: center;
+  bottom: 0;
+  background-color: #FFF;
 }
