--- a/miniapp/components/users-intro/users-intro.wxml
+++ b/miniapp/components/users-intro/users-intro.wxml
@@ -1,6 +1,6 @@
 <!--components/users-intro/users-intro.wxml-->
 <view class='users-intro-wrapper'>
-  <wxc-avatar class='avatar'>{{user.name}}</wxc-avatar>
+  <wxc-avatar src="{{user.src}}" class='avatar'>{{user.name}}</wxc-avatar>
   <view class='user-name'>{{user.name}}</view>
   <view class='user-address'>{{user.address}}</view>
 </view>
