--- a/miniapp/pages/user-set/user-set.wxss
+++ b/miniapp/pages/user-set/user-set.wxss
@@ -44,3 +44,15 @@
   align-items: center;
   justify-content: center;
 }
+.wrapper{
+  width: 100%;
+  border-top: 5rpx solid #D9D9D9
+}
+.wrapper input{
+  height: 120rpx;
+  line-height: 120rpx;
+  border-bottom: 1rpx solid #d9d9d9;
+  padding: 0 30rpx;
+  font-size: 32rpx;
+  color: #888888;
+}
