--- a/miniapp/components/goods-card/goods-card.wxml
+++ b/miniapp/components/goods-card/goods-card.wxml
@@ -4,7 +4,7 @@
     <users-intro user="{{good.user}}"></users-intro>
     <wxc-price class="card-price" value="{{good.second_price}}"></wxc-price>
   </view>
-  <image src='' class='card-img'></image>
+  <image src='/images/{{good.name}}.png' class='card-img'></image>
   <wxc-elip class='card-title color-title'>{{good.name}}</wxc-elip>
   <view class='card-address color-subtitle'>来自{{good.user.address}}</view>
   <wxc-icon size="50" type="arrow-right" class='card-arrow'></wxc-icon>
