--- a/miniapp/components/goods-minicard/goods-minicard.wxml
+++ b/miniapp/components/goods-minicard/goods-minicard.wxml
@@ -1,6 +1,6 @@
 <!--components/goods-minicard/goods-minicard.wxml-->
-<view class='wrapper'>
-  <image src='' class='img'></image>
+<view class='wrapper' bindtap='showDetail'>
+  <image src='/images/{{good.name}}.png' class='img'></image>
   <view class='name'>{{good.name}}</view>
   <!-- <view class='address'>来自{{good.user.address}}</view> -->
   <wxc-price class="price" value="{{good.second_price}}"></wxc-price>
