--- a/miniapp/components/message-card/message-card.wxml
+++ b/miniapp/components/message-card/message-card.wxml
@@ -1,6 +1,12 @@
 <!--components/message-card/message-card.wxml-->
 <view class='wrapper'>
-  <wxc-avatar class='avatar'>{{message.sender.name}}</wxc-avatar>
+    <block wx:if="{{user.name}}">
+        <wxc-avatar src="/images/{{user.name}}.png" class='avatar'></wxc-avatar>
+      </block>
+      <block wx:else>
+          <wxc-avatar class='avatar avatarback'>{{user.name}}</wxc-avatar>
+      </block>
+  <!-- <wxc-avatar class='avatar' src="/images/{{user.name}}.png"></wxc-avatar> -->
   <view class='name'>{{message.sender.name}}</view>
   <view class='content'>{{message.content}}</view>
   <view class='time'>{{message.created_at}}</view>
