--- a/miniapp/components/message-card/message-card.wxml
+++ b/miniapp/components/message-card/message-card.wxml
@@ -1,10 +1,10 @@
 <!--components/message-card/message-card.wxml-->
 <view class='wrapper'>
-    <block wx:if="{{user.name}}">
-        <wxc-avatar src="/images/{{user.name}}.png" class='avatar'></wxc-avatar>
+    <block wx:if="{{message.sender.name}}">
+        <wxc-avatar src="/images/{{message.sender.name}}.png" class='avatar'></wxc-avatar>
       </block>
       <block wx:else>
-          <wxc-avatar class='avatar avatarback'>{{user.name}}</wxc-avatar>
+          <wxc-avatar class='avatar avatarback'>{{message.sender.name}}</wxc-avatar>
       </block>
   <!-- <wxc-avatar class='avatar' src="/images/{{user.name}}.png"></wxc-avatar> -->
   <view class='name'>{{message.sender.name}}</view>
